--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Reméljük Henrik megcsinálja (legalábbis elkezdi) a Packet Tracer feladatot.
      <hr><br>
       </p>
-      <form id="kalkulatorjshmtl">
+      <form id="kalkulatorjshtml">
           Eszköz neve: <input type="text" name="neve"><br>
           Vásárlási ára: <input type="number" name="ara"><br>
           Darabszám: <input type="number" name="db"><br>
