--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     var x = document.getElementById("kalkulatorjshtml");
     var text = "";
     var i;
-    text += x.elements[0].value + " költségvetése: " + x.elements[1].value * x.elements[2] + "<br>";
+    text += x.elements[0].value + " költségvetése: " + x.elements[1].value * x.elements[2].value + "<br>";
     document.getElementById("kalkulatorszoveg").innerHTML = text;
   }
   </script>
