--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     text += x.elements[0].value + " költségvetése: " + (x.elements[1].value * x.elements[2].value) + "FT" + "<br>";
     document.getElementById("kalkulatorszoveg").innerHTML = text;
   }
+   
+   <button href="pythonfeladatresze.py">python file letöltése</button>
+   
   </script>
  </body>
  </html>
