--- a/index.html
+++ b/index.html
@@ -12,20 +12,33 @@
  <body>
     <h1>PROJEKTMUNKA (BALI, PÍTÖR, HENCI)</h1>
     <p>
-     <hr><br>
- Először alaposan átolvastuk legalább 69-szer a feladatot, hogy biztosan ne vétsünk 1 hibát se.<br>
+      2022.04.06 8:30
+      Először alaposan átolvastuk legalább 69-szer a feladatot, hogy biztosan ne vétsünk 1 hibát se.
       <hr><br>
-      Csapatunk tagjai ők: Balázs Juhász, Vida Henrik, Zorinátz Péter.<br>
+      Csapatunk tagjai ők: Balázs Juhász, Vida Henrik, Zorinátz Péter.
       <hr><br>
-     A HTML munkálatokat Balázs fogja csinálni, Vida Henrik a Packet Tracert (ha megcsinálja egyáltalán)
+      A HTML munkálatokat Balázs fogja csinálni, Vida Henrik a Packet Tracert (ha megcsinálja egyáltalán)
       és én ezt a txt fájlt, a képeket a munkáról illetve kis segítséget a htmlbe.
-     <hr><br>
-     Ezzel el is kezdődtek a munkálatok, ezerrel püföljük a billentyűket, hogy tökéletesen működjön minden, amit írunk.
+      <hr><br>
+      Ezzel el is kezdődtek a munkálatok, ezerrel püföljük a billentyűket, hogy tökéletesen működjön minden, amit írunk.
       <hr><br>
       Az munkálatokról szóló képeket a Z:\10. Osztály\10. Osztály - Monok Judit\projekt04.06\Munkálati Képek fájlmappában lehet megtekinteni
       <hr><br>
       Reméljük Henrik megcsinálja (legalábbis elkezdi) a Packet Tracer feladatot.
-     <hr><br>
+      <hr><br>
+      2022.04.06 9:33
+      Péter elkezdte csinálni a html weboldalt
+      <hr><br>
+      Balázs befejezte a programot, mostantól ő írja a dokumentálást
+      <hr><br>
+      Balázs elkezdett javascriptben munkálkodni, mivel eléggé unatkozott
+      <hr><br>
+      10:00
+      Miután rájöttünk hogy html helyett hmtl-t írtunk id ként, újra feltöltöttük a html file-t
+      <hr><br>
+      10:35
+      Befejeztük a javascript file-t, html-be beleépítve és fixeltük a bugokat
+      <hr><br>
       </p>
       <form id="kalkulatorjshtml">
           Eszköz neve: <input type="text" name="neve"><br>
