--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  <body>
     <h1>PROJEKTMUNKA (BALI, PÍTÖR, HENCI)</h1>
-    <img src="pythonszenvedes.png">
+    <img src="pythonszenvedes.png" id="kep">
     <p>
       2022.04.06 8:30
       Először alaposan átolvastuk legalább 69-szer a feladatot, hogy biztosan ne vétsünk 1 hibát se.
