--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <hr><br>
       Csapatunk tagjai ők: Balázs Juhász, Vida Henrik, Zorinátz Péter.
       <hr><br>
-      A HTML munkálatokat Balázs fogja csinálni, Vida Henrik a Packet Tracert (ha megcsinálja egyáltalán)
-      és én ezt a txt fájlt, a képeket a munkáról illetve kis segítséget a htmlbe.
+      A HTML munkálatokat Péter fogja csinálni, Vida Henrik a Packet Tracert (ha megcsinálja egyáltalán)
+      és Balázs a dokumentációt, programokat(javascript, python).
       <hr><br>
       Ezzel el is kezdődtek a munkálatok, ezerrel püföljük a billentyűket, hogy tökéletesen működjön minden, amit írunk.
       <hr><br>
