--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       Befejeztük a javascript file-t, html-be beleépítve és fixeltük a bugokat
       <hr><br>
       </p>
+      <img src="pythonszenvedes.png" alt="Python kódolása" target="Python kódolása" style="width:500px;height:600px;">
       <form id="kalkulatorjshtml">
           Eszköz neve: <input type="text" name="neve"><br>
           Vásárlási ára: <input type="number" name="ara"><br>
