--- a/projekt-bali-henci-peti/index.html
+++ b/projekt-bali-henci-peti/index.html
@@ -11,35 +11,42 @@
     <h1>PROJEKTMUNKA (BALÁZS, PÉTER, HENRIK)</h1>
     <p>
       2022.04.06 8:30
-      Először alaposan átolvastuk legalább 69-szer a feladatot, hogy biztosan ne vétsünk 1 hibát se.
-      </p><hr><br>
-      Csapatunk tagjai ők: Balázs Juhász, Vida Henrik, Zorinátz Péter.
-      <hr><br>
-      A HTML munkálatokat Péter fogja csinálni, Vida Henrik a Packet Tracert (ha megcsinálja egyáltalán)
-      és Balázs a dokumentációt, programokat(javascript, python).
-      <hr><br>
-      Ezzel el is kezdődtek a munkálatok, ezerrel püföljük a billentyűket, hogy tökéletesen működjön minden, amit írunk.
-      <hr><br>
-      Az munkálatokról szóló képeket a Z:\10. Osztály\10. Osztály - Monok Judit\projekt04.06\Munkálati Képek fájlmappában lehet megtekinteni
-      <hr><br>
-      Reméljük Henrik megcsinálja (legalábbis elkezdi) a Packet Tracer feladatot.
-      <hr><br>
-      2022.04.06 9:33
-      Péter elkezdte csinálni a html weboldalt
-      <hr><br>
-      Balázs befejezte a programot, mostantól ő írja a dokumentálást
-      <hr><br>
-      Balázs elkezdett javascriptben munkálkodni, mivel eléggé unatkozott
-      <hr><br>
-      10:00
-      Miután rájöttünk hogy html helyett hmtl-t írtunk id ként, újra feltöltöttük a html file-t
-      <hr><br>
-      10:35
-      Befejeztük a javascript file-t, html-be beleépítve és fixeltük a bugokat
-      <hr><br>
-      13:40
-      Péter elkezdte újra frissíteni a css-t, hogy jobban nézzen ki a weboldalt.
-      Ezt a sort Péter írta 😃
+          Először alaposan átolvastuk legalább 69-szer a feladatot, hogy biztosan ne vétsünk 1 hibát se.
+         <hr><br> 
+          Csapatunk tagjai ők: Balázs Juhász, Vida Henrik, Zorinátz Péter.
+         <hr><br> 
+          A HTML munkálatokat Balázs fogja csinálni, Vida Henrik a Packet Tracert (ha megcsinálja egyáltalán)
+          és én ezt a txt fájlt, a képeket a munkáról illetve kis segítséget a htmlbe.
+         <hr><br> 
+          Ezzel el is kezdődtek a munkálatok, ezerrel püföljük a billentyűket, hogy tökéletesen működjön minden, amit írunk.
+          <hr><br>
+          Reméljük Henrik megcsinálja (legalábbis elkezdi) a Packet Tracer feladatot.
+          <hr><br>
+          2022.04.06 9:33
+          Péter elkezdte csinálni a html weboldalt
+          <hr><br>
+          Balázs befejezte a programot, mostantól ő írja a dokumentálást
+          <hr><br>
+          Balázs elkezdett javascriptben munkálkodni, mivel eléggé unatkozott
+          <hr><br>
+          10:00
+          Miután rájöttünk hogy html helyett hmtl-t írtunk id ként, újra feltöltöttük a html file-t
+          <hr><br>
+          10:35
+          Befejeztük a javascript file-t, html-be beleépítve és fixeltük a bugokat
+          <hr><br>
+          2022.04.07 8:12
+          Henrikről semmi információ nincs, reméljük hogy elkezdte a feladatot, mert ha nem akkor nem lenne
+          jó 1-est kapni miatta és rontani az átlagom :/
+          <hr><br>
+          8:39
+          Megpróbáltuk bepozícionálni a képet illetve a gombot, a szöveg nem ment sehogy sem :/
+          <hr><br>
+          9:22
+          Befejeztük PETIVEL a packet tracer feladatot
+          <hr><br>
+          14:23
+          Megváltoztattuk az oldal hátterét, javítottunk a programon(hibakódok, file-ba elmentni az adatokat)
       <hr><br>
       <p></p>
       <h2>ÁRKALKULÁTOR HERE!!!</h2>
