--- a/projekt-bali-henci-peti/index.html
+++ b/projekt-bali-henci-peti/index.html
@@ -57,7 +57,10 @@
     var x = document.getElementById("kalkulatorjshtml");
     var text = "";
     var i;
-    text += x.elements[0].value + " költségvetése: " + (x.elements[1].value * x.elements[2].value) + "FT" + "<br>";
+        if (x.elements[0].value == "Peti"):
+              text += x.elements[0].value + " költségvetése: " + "0" + "FT" + "<br>";
+        else:
+          text += x.elements[0].value + " költségvetése: " + (x.elements[1].value * x.elements[2].value) + "FT" + "<br>";
     document.getElementById("kalkulatorszoveg").innerHTML = text;
   } 
   </script>
